[gd_scene load_steps=14 format=3 uid="uid://dw30ek7b4ret7"]

[ext_resource type="Script" path="res://scene/weapons/bullets/alice_bullet/alice_bullet.gd" id="1_oechn"]
[ext_resource type="Texture2D" uid="uid://ct5fpqgultvns" path="res://asset/素材/人形.png" id="2_u13fl"]
[ext_resource type="Texture2D" uid="uid://cphimhmgk3num" path="res://asset/素材/体术.png" id="2_vdx4p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qj5dn"]
radius = 32.0624

[sub_resource type="AtlasTexture" id="AtlasTexture_kmf8b"]
atlas = ExtResource("2_vdx4p")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jx6y"]
atlas = ExtResource("2_u13fl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2vsr"]
atlas = ExtResource("2_u13fl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiyv8"]
atlas = ExtResource("2_u13fl")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaqdt"]
atlas = ExtResource("2_u13fl")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7xul"]
atlas = ExtResource("2_u13fl")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipxfl"]
atlas = ExtResource("2_u13fl")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_knyyp"]
atlas = ExtResource("2_u13fl")
region = Rect2(0, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gfxiq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmf8b")
}],
"loop": true,
"name": &"new_animation",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jx6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2vsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiyv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaqdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7xul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipxfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knyyp")
}],
"loop": true,
"name": &"ou",
"speed": 5.0
}]

[node name="AliceBullet" type="Area2D"]
top_level = true
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("1_oechn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qj5dn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.5, 0.5)
scale = Vector2(0.59375, 0.59375)
sprite_frames = SubResource("SpriteFrames_gfxiq")
animation = &"ou"
autoplay = "ou"

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="attack" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -1)
scale = Vector2(0.365926, 0.51072)
skew = 0.0523599
sprite_frames = SubResource("SpriteFrames_gfxiq")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.53697

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="destroy_timer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
